[project]
name = "better-mem0-mcp"
version = "1.2.1-beta.1"
description = "Zero-setup MCP Server for AI memory - works with Neon/Supabase"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "n24q02m", email = "quangminh2422004@gmail.com" }]
keywords = ["mcp", "mem0", "memory", "ai-agent", "pgvector", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = "==3.13.*"
dependencies = [
    # MCP Server
    "mcp[cli]",
    # Mem0 Core
    "mem0ai",
    # Config
    "pydantic-settings",
    # Database
    "psycopg[binary,pool]",
    # Logging
    "loguru",
    # Gemini (for embeddings)
    "google-genai",
    # LLM (for Mem0)
    "litellm",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "ty",
    "pre-commit",
]

[project.scripts]
better-mem0-mcp = "better_mem0_mcp:main"

[project.urls]
Homepage = "https://github.com/n24q02m/better-mem0-mcp"
Repository = "https://github.com/n24q02m/better-mem0-mcp.git"
Issues = "https://github.com/n24q02m/better-mem0-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/better_mem0_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ty]
# Ignore rules that cause false positives:
# - unresolved-import: External modules (mem0, mcp)
# - unresolved-attribute: Lazy-initialized globals that ty cannot track
# - possibly-missing-attribute: Runtime-checked attributes
# - invalid-assignment: Dynamic dict type inference issues
rules = { unresolved-import = "ignore", unresolved-attribute = "ignore", possibly-missing-attribute = "ignore", invalid-assignment = "ignore" }
